<resources>
    <string name="app_name">Salesman</string>

    <string name="home_page">Home Page</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_user_registration">UserRegistrationActivity</string>
    <string name="username">E-mail</string>

    <string name="search_title">Search products</string>


    <string name="button_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="title_activity_offer_detail">OfferDetailActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="photo_upload">Photo Upload</string>

    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="title_activity_photo_upload">PhotoUploadActivity</string>
    <string name="title_activity_pick_your_favourites">PickYourFavouritesActivity</string>

    <string-array name="nav_drawer_items">

        <item>Offers</item>
        <item>Products</item>
        <item>Store Map</item>
        <item>Settings</item>
        <item>About Salesman</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
<<<<<<< HEAD
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="title_activity_product_navigation">ProductNavigationActivity</string>
=======
    <string name="title_activity_main">Salesman</string>
>>>>>>> 347d36a4c567cf055df823189e6c4cd35475009f
</resources>
