<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="cmpe295.sjsu.edu.salesman.RegistrationActivity"
    >
<RelativeLayout

    android:id="@+id/registerscreen"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:background="#ff60b9ff"
    style="@style/Theme.AppCompat.Light.NoActionBar"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first"
        android:id="@+id/editText_first"
        android:ems="10"
        android:background="#ffffffff"
        android:paddingLeft="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last"
        android:id="@+id/editText_last"
        android:ems="10"
        android:background="#ffffffff"
        android:paddingLeft="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editText_first"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/editText_password"
        android:background="#ffffffff"
        android:ems="10"
        android:paddingLeft="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_last"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/editText_email"
        android:background="#ffffffff"
        android:ems="10"
        android:paddingLeft="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_password"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="createUser"
        android:text="submit" />


</RelativeLayout>
</ScrollView>
